--- a/style.css
+++ b/style.css
@@ -88,3 +88,24 @@ section{
     background-color: var(--number);
     color: white;
 }
+
+@media only screen and (max-width: 1000px){
+    .screen{
+        width: 19%;
+    }
+}
+@media only screen and (max-width: 730px){
+    .screen{
+        width: 26%;
+    }
+}
+@media only screen and (max-width: 600px){
+    .screen{
+        width: 31%;
+    }
+}
+@media only screen and (max-width: 500px){
+    .screen{
+        width: 38%;
+    }
+}
