--- a/style.css
+++ b/style.css
@@ -90,22 +90,22 @@ section{
 }
 
 @media only screen and (max-width: 1000px){
-    .screen{
+    .output{
         width: 19%;
     }
 }
 @media only screen and (max-width: 730px){
-    .screen{
+    .output{
         width: 26%;
     }
 }
 @media only screen and (max-width: 600px){
-    .screen{
+    .output{
         width: 31%;
     }
 }
 @media only screen and (max-width: 500px){
-    .screen{
+    .output{
         width: 38%;
     }
 }
